# wizards

./: CMakeLists.txt  CONFIG.example  GPN.xml  GPNTYPE.xml  effi-version.GPN-01_01_01  gpn-patch.sh  gpn.cc  gpn.h  gpn.html  gpn.lic  init-env.sh  init.sql  locale.ru_RU.GPN  reporter-version.GPN-01_01_01  stamppdf.cc  stamppdf.h  start.sh  stop.sh  test-import.xml  version
dbpatches/gpn-01_01_01-001/: ADD_Document_010.sql  ADD_EStatus_010.sql  ALTER_EQUIPMENT_010.sql  ALTER_GPNUser.sql
dbpatches/gpn-01_01_01-002/: ADD_EventJournal_010.sql
dbpatches/gpn-01_01_01-003/: Alter_EventJournal_010.sql
result/: main.xml  mainheader.xml  properties.xml
result/customization/: ContractFolder.xml  EquipmentFolder.xml  EventJournalAdd.xml  GateValvesAdd.xml  MCProjectAdd.xml  PompAdd.xml  PompGet.xml  PompUpdate.xml  UmbilicalCableAdd.xml
